# My_BigDFT

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  conftest.py  pylintrc  setup.cfg  setup.py  tox.ini
doc/: Makefile  index.md
doc/source/: code_doc.rst  conf.py  dissociation.rst  exercise_01.rst  exercise_02.rst  index.rst  inputparams.rst  iofiles.rst  job.rst  logfile.rst  mybigdft.rst  phonon_raman.rst  phonons_infrared_raman.rst  poltensor.rst  posinp.rst  rmult_convergence.rst  tutorials.rst  workflow.rst  workflows.rst
docs/: .buildinfo  Makefile  attributes.html  code_doc.html  convergences.html  dft.html  dft_tutorials.html  dissociation.html  elecpoltensor.html  exercise_01.html  exercise_02.html  exercise_03.html  exercises.html  genindex.html  geopt.html  geoptschnet.html  hgrids_convergence.html  index.html  infrared.html  inputparams.html  iofiles.html  job.html  jobschnet.html  logfile.html  logfileschnet.html  mlobjects.html  mlworkflows.html  objects.inv  phonons.html  phonons_infrared_raman.html  phononschnet.html  poltensors.html  posinp.html  py-modindex.html  raman.html  rmult_convergence.html  search.html  searchindex.js  tutorials.html  vibpoltensor.html  (+2 more)
docs/_modules/: index.html
docs/_sources/: attributes.rst.txt  code_doc.rst.txt  convergences.rst.txt  dft.rst.txt  dft_tutorials.rst.txt  elecpoltensor.rst.txt  exercise_03.rst.txt  exercises.rst.txt  index.rst.txt  infrared.rst.txt  iofiles.rst.txt  job.rst.txt  jobschnet.rst.txt  logfileschnet.rst.txt  mlobjects.rst.txt  mlworkflows.rst.txt  phonons.rst.txt  posinp.rst.txt  workflow.rst.txt  workflows.rst.txt
docs/notebooks/: Convergences.html  Dissociation_curve.html  Exercise_01_Polarizability_Tensor_jobs.html  Exercise_02_Polarizability_Tensor_Workflow_1.html  Exercise_03_Polarizability_Tensor_Workflow_2.html  Geopt.html  Input_files.html  Job_and_Logfile.html  Phonons_and_InfraredSpectrum.html  Phonons_and_RamanSpectrum.html  PolTensor.html  Solution_01.html  Solution_02.html  Solution_03.html  VibPolTensor.html
docs/source/: code_doc.rst  conf.py  generate_attributes.py  geopt.rst  geoptschnet.rst  hgrids_convergence.rst  index.rst  inputparams.rst  jobschnet.rst  mlworkflows.rst  phononschnet.rst  poltensors.rst  raman.rst  vibpoltensor.rst
mybigdft/: __init__.py  globals.py  iofiles.py  job.py  jobschnet.py  mybigdft.py  poltensor.py
mybigdft/iofiles/: __init__.py  inputparams.py  logfiles.py  posinp.py
mybigdft/ml_workflows/: __init__.py  geoptschnet.py  phononschnet.py
mybigdft/workflows/: __init__.py  convergences.py  dissociation.py  geopt.py  infraredspectrum.py  phonons.py  poltensor.py  ramanspectrum.py  (+2 more)
src/: input_variables_definition.yaml
tests/: free.xyz  log-HCN.yaml  log-geopt-acceptable-though-incomplete.yaml  log-incomplete.yaml.ref  log-warnings.yaml  pylintrc  surface.xyz  test_convergences.py  test_iofiles.py  test_job.py  test_workflows.py
(+39 files in other folders)
